--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
               <div class="col-lg-4 col-md-6 position-relative pb-2">
                 <div class="card bg-dark text-white">
                   <img
-                    src="/img/euro_downtown.png"
+                    src="./img/euro_downtown.png"
                     class="card-img"
                     alt="..."
                     style="background-size: cover"
@@ -258,7 +258,7 @@
               <div class="col-lg-4 col-md-6 position-relative pb-2">
                 <div class="card bg-dark text-white">
                   <img
-                    src="/img/euro_main_1.png"
+                    src="./img/euro_main_1.png"
                     class="card-img"
                     alt="..."
                     style="background-size: cover"
@@ -276,7 +276,7 @@
               <div class="col-lg-4 col-md-6 position-relative">
                 <div class="card bg-dark text-white">
                   <img
-                    src="/img/euro_doral_1.png"
+                    src="./img/euro_doral_1.png"
                     class="card-img"
                     alt="..."
                     style="background-image: cover"
