Maybe Final changes on design

--- a/currency-exchange.html
+++ b/currency-exchange.html
@@ -23,13 +23,18 @@
       style="--bs-bg-opacity: 0.85"
     >
       <div
-        class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3"
+        class="container d-flex flex-wrap align-items-center justify-content-center justify-content-sm-between"
       >
         <a
           class="navbar-brand d-flex col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
           href="index.html"
         >
-          <img src="img/euro_logo_white.png" width="250px" alt="" />
+          <img
+            src="img/euro_logo_white.png"
+            width="250px"
+            alt=""
+            style="--bs-bg-opacity: 1"
+          />
         </a>
         <button
           class="navbar-toggler"
@@ -47,15 +52,15 @@
           class="collapse navbar-collapse col-9 col-md-auto mb-2 justify-content-evenly mb-md-0"
           id="navbarSupportedContent"
         >
-          <div class="d-flex">
+          <div class="d-flex justify-content-center">
             <a
               href="https://xchangeofamerica.com/"
-              class="text-decoration-none btn btn-sm btn-primary"
+              class="text-decoration-none btn btn-sm btn-secondary"
               >ORDER ONLINE</a
             >
           </div>
 
-          <ul class="navbar-nav mb-2 mb-lg-0">
+          <ul class="navbar-nav mb-2 mb-lg-0 align-items-center">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
@@ -64,7 +69,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link active dropdown-toggle"
+                class="nav-link dropdown-toggle active"
                 href="services.html"
                 id="navbarDropdown1"
                 role="button"
@@ -73,7 +78,10 @@
               >
                 Services
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+              <ul
+                class="dropdown-menu dropdown-menu-dark text-center"
+                aria-labelledby="navbarDropdown1"
+              >
                 <li>
                   <a class="dropdown-item" href="services.html">Our Services</a>
                 </li>
@@ -101,7 +109,10 @@
               >
                 Location
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
+              <ul
+                class="dropdown-menu dropdown-menu-dark text-center"
+                aria-labelledby="navbarDropdown2"
+              >
                 <li>
                   <a class="dropdown-item" href="locations.html">Maimi, FL</a>
                 </li>
@@ -127,7 +138,12 @@
       <section
         class="bg-container-img position-relative"
         style="
-          background-image: url(img/currency1.jpg);
+          background-image: linear-gradient(
+              to right bottom,
+              rgba(0, 0, 0, 0.2),
+              rgba(0, 0, 0, 0.4)
+            ),
+            url(img/currency1.jpg);
           background-position: 50% 40%;
         "
       >
@@ -229,10 +245,10 @@
     <footer class="bg-light">
       <div class="container">
         <div class="row row-col-4 py-5 mt-5 border-top">
-          <div class="col-md-3 text-start">
+          <div class="col-md-4 text-start">
             <a
               href="index.html"
-              class="d-flex align-items-center mb-3 link-dark text-decoration-none"
+              class="d-flex align-items-sm-start mb-3 link-dark text-decoration-none"
             >
               <img
                 src="img/euro_logo.png"
@@ -246,7 +262,10 @@
               Our company will go the extra mile to offer the best currency
               exchange rate that will meet your requirements.
             </p>
-            <p class="text-muted">&copy; 2021</p>
+            <p class="text-muted">
+              &copy; Copyright &copy; <span class="year">2022</span> Euro
+              Exchange USA.
+            </p>
           </div>
 
           <div class="col-md-4 text-start">
@@ -254,29 +273,44 @@
             <div class="col-md-12">
               <p>
                 <b>Head Office:</b> 235 SE 1st Street, Miami <br />
-                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+                <b>Telephone:</b>
+                <a
+                  class="link-secondary text-decoration-none"
+                  href="tel:+13053772536"
+                  >(305) 377-2536</a
+                >
               </p>
             </div>
 
             <div class="col-md-12">
               <p>
                 <b>Doral Office:</b> 10429, NW 41st Street <br />
-                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+                <b>Telephone:</b>
+                <a
+                  class="link-secondary text-decoration-none"
+                  href="tel:+13053772536"
+                  >(305) 377-2536</a
+                >
               </p>
             </div>
 
             <div class="col-md-12">
               <p>
                 <b>Downtown Miami Office:</b> 242 NE 1st street, Miami <br />
-                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+                <b>Telephone:</b>
+                <a
+                  class="link-secondary text-decoration-none"
+                  href="tel:+13053772536"
+                  >(305) 377-2536</a
+                >
               </p>
             </div>
           </div>
 
           <div class="col-md-2 text-start">
             <h5>Follow us</h5>
-            <ul class="list-unstyled d-flex justify-content-start">
-              <li class="ms-3">
+            <ul class="list-unstyled d-flex flex-grow-1 justify-content-start">
+              <li>
                 <a
                   class="link-dark"
                   href="https://www.facebook.com/EuroExchangeUSA/"
@@ -284,14 +318,14 @@
                   <i class="bi bi-facebook" style="font-size: 2rem"></i>
                 </a>
               </li>
-              <li class="ms-3">
+              <li class="ms-1">
                 <a
                   class="link-dark"
                   href="https://www.instagram.com/euroexchange/"
                   ><i class="bi bi-instagram" style="font-size: 2rem"></i
                 ></a>
               </li>
-              <li class="ms-3">
+              <li class="ms-1">
                 <a
                   class="link-dark"
                   href="https://www.linkedin.com/company/euroexchangegroup/about/"
@@ -305,35 +339,51 @@
             <h5>Section</h5>
             <ul class="nav flex-column">
               <li class="nav-item mb-2">
-                <a href="index.html" class="nav-link p-0 text-muted">Home</a>
+                <a
+                  href="index.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
+                  >Home</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="about-us.html" class="nav-link p-0 text-muted"
+                <a
+                  href="about-us.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
                   >Abouts Us</a
                 >
               </li>
               <li class="nav-item mb-2">
-                <a href="services.html" class="nav-link p-0 text-muted"
+                <a
+                  href="services.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
                   >Services</a
                 >
               </li>
               <li class="nav-item mb-2">
-                <a href="locations.html" class="nav-link p-0 text-muted"
+                <a
+                  href="locations.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
                   >Location</a
                 >
               </li>
               <li class="nav-item mb-2">
-                <a href="rates.html" class="nav-link p-0 text-muted">Rates</a>
+                <a
+                  href="rates.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
+                  >Rates</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="contact-us.html" class="nav-link p-0 text-muted"
+                <a
+                  href="contact-us.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
                   >Contact Us</a
                 >
               </li>
               <li class="nav-item mb-2">
                 <a
                   href="https://xchangeofamerica.com/"
-                  class="btn btn-outline-primary"
+                  class="btn btn-outline-secondary"
                   >Order Online</a
                 >
               </li>
