--- a/contact-us.html
+++ b/contact-us.html
@@ -23,13 +23,18 @@
       style="--bs-bg-opacity: 0.85"
     >
       <div
-        class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3"
+        class="container d-flex flex-wrap align-items-center justify-content-center justify-content-sm-between"
       >
         <a
           class="navbar-brand d-flex col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
           href="index.html"
         >
-          <img src="img/euro_logo_white.png" width="250px" alt="" />
+          <img
+            src="img/euro_logo_white.png"
+            width="250px"
+            alt=""
+            style="--bs-bg-opacity: 1"
+          />
         </a>
         <button
           class="navbar-toggler"
@@ -47,15 +52,15 @@
           class="collapse navbar-collapse col-9 col-md-auto mb-2 justify-content-evenly mb-md-0"
           id="navbarSupportedContent"
         >
-          <div class="d-flex">
+          <div class="d-flex justify-content-center">
             <a
               href="https://xchangeofamerica.com/"
-              class="text-decoration-none btn btn-sm btn-primary"
+              class="text-decoration-none btn btn-sm btn-secondary"
               >ORDER ONLINE</a
             >
           </div>
 
-          <ul class="navbar-nav mb-2 mb-lg-0">
+          <ul class="navbar-nav mb-2 mb-lg-0 align-items-center">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
@@ -73,7 +78,10 @@
               >
                 Services
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+              <ul
+                class="dropdown-menu dropdown-menu-dark text-center"
+                aria-labelledby="navbarDropdown1"
+              >
                 <li>
                   <a class="dropdown-item" href="services.html">Our Services</a>
                 </li>
@@ -101,7 +109,10 @@
               >
                 Location
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
+              <ul
+                class="dropdown-menu dropdown-menu-dark text-center"
+                aria-labelledby="navbarDropdown2"
+              >
                 <li>
                   <a class="dropdown-item" href="locations.html">Maimi, FL</a>
                 </li>
@@ -127,22 +138,28 @@
       <section
         class="bg-container-img position-relative"
         style="
-          background-image: url(img/contact.jpg);
+          background-image: linear-gradient(
+              to right bottom,
+              rgba(0, 0, 0, 0.2),
+              rgba(0, 0, 0, 0.4)
+            ),
+            url(img/contact.jpg);
           background-position: 50% 40%;
         "
       >
         <div
           class="container position-absolute top-50 start-50 translate-middle"
-        ></div>
+        >
+          <h1 class="text-center text-white">Contact Us</h1>
+        </div>
       </section>
 
       <section class="mt-5 mb-5">
         <div class="container">
           <div class="row">
             <div class="col-md-7">
-              <h3 class="text-center">Contact Us</h3>
-
               <div class="container-contact-us mt-5">
+                <h4 class="text-center">Contact Us</h4>
                 <form>
                   <div class="mb-3">
                     <label for="FullName" class="form-label">Full Name</label>
@@ -188,7 +205,7 @@
                       class="form-control"
                       id="FormControlTextarea1"
                       placeholder="Your message"
-                      rows="3"
+                      rows="14"
                     ></textarea>
                   </div>
 
@@ -209,26 +226,26 @@
             <div class="col-md-5">
               <div class="container pt-5 pb-5">
                 <div
-                  class="container-contact-map bg-white text-center pt-5 pb-5"
+                  class="container-contact-map bg-white text-center pt-0 pb-5"
                 >
-                  <h3>MIAMI HEADQUATERS</h3>
+                  <h5>MIAMI HEADQUATERS</h5>
                   <p>
                     235 SE 1st Street, <br />
                     Miami, FL 33131
                   </p>
 
-                  <h3>HOURS OF OPERATION</h3>
+                  <h5>HOURS OF OPERATION</h5>
                   <p>
                     Mon – Fri | 8:00 AM – 5:00 PM <br />
                     Saturday | 9:00 AM – 3:00 PM
                   </p>
 
-                  <h3>DOWNTOWN BRANCH</h3>
+                  <h5>DOWNTOWN BRANCH</h5>
                   <p>
                     242 NE 1st Street, <br />
                     Miami, FL 33132
                   </p>
-                  <h3>HOURS OF OPERATION</h3>
+                  <h5>HOURS OF OPERATION</h5>
                   <p>
                     Mon – Fri | 8:00 AM – 6:00 PM <br />
                     Saturday | 9:00 AM – 5:00 PM <br />
@@ -237,13 +254,13 @@
                     (with purchase)
                   </p>
 
-                  <h3>DORAL BRANCH</h3>
+                  <h5>DORAL BRANCH</h5>
                   <p>
                     10429 NW 41st St, <br />
                     Doral, FL 33178
                   </p>
 
-                  <h3>HOURS OF OPERATION</h3>
+                  <h5>HOURS OF OPERATION</h5>
                   <p>
                     Mon – Fri | 8:00 AM – 5:00 PM <br />
                     Saturday | 9:00 AM – 3:00 PM
@@ -739,10 +756,10 @@
     <footer class="bg-light">
       <div class="container">
         <div class="row row-col-4 py-5 mt-5 border-top">
-          <div class="col-md-3 text-start">
+          <div class="col-md-4 text-start">
             <a
               href="index.html"
-              class="d-flex align-items-center mb-3 link-dark text-decoration-none"
+              class="d-flex align-items-sm-start mb-3 link-dark text-decoration-none"
             >
               <img
                 src="img/euro_logo.png"
@@ -756,7 +773,10 @@
               Our company will go the extra mile to offer the best currency
               exchange rate that will meet your requirements.
             </p>
-            <p class="text-muted">&copy; 2021</p>
+            <p class="text-muted">
+              &copy; Copyright &copy; <span class="year">2022</span> Euro
+              Exchange USA.
+            </p>
           </div>
 
           <div class="col-md-4 text-start">
@@ -764,29 +784,44 @@
             <div class="col-md-12">
               <p>
                 <b>Head Office:</b> 235 SE 1st Street, Miami <br />
-                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+                <b>Telephone:</b>
+                <a
+                  class="link-secondary text-decoration-none"
+                  href="tel:+13053772536"
+                  >(305) 377-2536</a
+                >
               </p>
             </div>
 
             <div class="col-md-12">
               <p>
                 <b>Doral Office:</b> 10429, NW 41st Street <br />
-                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+                <b>Telephone:</b>
+                <a
+                  class="link-secondary text-decoration-none"
+                  href="tel:+13053772536"
+                  >(305) 377-2536</a
+                >
               </p>
             </div>
 
             <div class="col-md-12">
               <p>
                 <b>Downtown Miami Office:</b> 242 NE 1st street, Miami <br />
-                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+                <b>Telephone:</b>
+                <a
+                  class="link-secondary text-decoration-none"
+                  href="tel:+13053772536"
+                  >(305) 377-2536</a
+                >
               </p>
             </div>
           </div>
 
           <div class="col-md-2 text-start">
             <h5>Follow us</h5>
-            <ul class="list-unstyled d-flex justify-content-start">
-              <li class="ms-3">
+            <ul class="list-unstyled d-flex flex-grow-1 justify-content-start">
+              <li>
                 <a
                   class="link-dark"
                   href="https://www.facebook.com/EuroExchangeUSA/"
@@ -794,14 +829,14 @@
                   <i class="bi bi-facebook" style="font-size: 2rem"></i>
                 </a>
               </li>
-              <li class="ms-3">
+              <li class="ms-1">
                 <a
                   class="link-dark"
                   href="https://www.instagram.com/euroexchange/"
                   ><i class="bi bi-instagram" style="font-size: 2rem"></i
                 ></a>
               </li>
-              <li class="ms-3">
+              <li class="ms-1">
                 <a
                   class="link-dark"
                   href="https://www.linkedin.com/company/euroexchangegroup/about/"
@@ -815,35 +850,51 @@
             <h5>Section</h5>
             <ul class="nav flex-column">
               <li class="nav-item mb-2">
-                <a href="index.html" class="nav-link p-0 text-muted">Home</a>
+                <a
+                  href="index.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
+                  >Home</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="about-us.html" class="nav-link p-0 text-muted"
+                <a
+                  href="about-us.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
                   >Abouts Us</a
                 >
               </li>
               <li class="nav-item mb-2">
-                <a href="services.html" class="nav-link p-0 text-muted"
+                <a
+                  href="services.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
                   >Services</a
                 >
               </li>
               <li class="nav-item mb-2">
-                <a href="locations.html" class="nav-link p-0 text-muted"
+                <a
+                  href="locations.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
                   >Location</a
                 >
               </li>
               <li class="nav-item mb-2">
-                <a href="rates.html" class="nav-link p-0 text-muted">Rates</a>
+                <a
+                  href="rates.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
+                  >Rates</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="contact-us.html" class="nav-link p-0 text-muted"
+                <a
+                  href="contact-us.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
                   >Contact Us</a
                 >
               </li>
               <li class="nav-item mb-2">
                 <a
                   href="https://xchangeofamerica.com/"
-                  class="btn btn-outline-primary"
+                  class="btn btn-outline-secondary"
                   >Order Online</a
                 >
               </li>
