--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       style="--bs-bg-opacity: 0.85"
     >
       <div
-        class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3"
+        class="container d-flex flex-wrap align-items-center justify-content-center justify-content-sm-between"
       >
         <a
           class="navbar-brand d-flex col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
@@ -57,15 +57,15 @@
           class="collapse navbar-collapse col-9 col-md-auto mb-2 justify-content-evenly mb-md-0"
           id="navbarSupportedContent"
         >
-          <div class="d-flex">
+          <div class="d-flex justify-content-center">
             <a
               href="https://xchangeofamerica.com/"
-              class="text-decoration-none btn btn-sm btn-primary"
+              class="text-decoration-none btn btn-sm btn-secondary"
               >ORDER ONLINE</a
             >
           </div>
 
-          <ul class="navbar-nav mb-2 mb-lg-0">
+          <ul class="navbar-nav mb-2 mb-lg-0 align-items-center">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html"
                 >Home</a
@@ -85,7 +85,10 @@
               >
                 Services
               </a>
-              <ul class="dropdown-menu w-75" aria-labelledby="navbarDropdown1">
+              <ul
+                class="dropdown-menu dropdown-menu-dark text-center"
+                aria-labelledby="navbarDropdown1"
+              >
                 <li>
                   <a class="dropdown-item" href="services.html">Our Services</a>
                 </li>
@@ -113,7 +116,10 @@
               >
                 Location
               </a>
-              <ul class="dropdown-menu w-75" aria-labelledby="navbarDropdown2">
+              <ul
+                class="dropdown-menu dropdown-menu-dark text-center"
+                aria-labelledby="navbarDropdown2"
+              >
                 <li>
                   <a class="dropdown-item" href="locations.html">Maimi, FL</a>
                 </li>
@@ -145,7 +151,7 @@
           <div class="carousel-inner">
             <div
               class="carousel-item active"
-              style="background-image: url(img/slider/euro_2.jpg)"
+              style="background-image: url(img/slider/slider_2.jpg)"
             >
               <div class="container">
                 <p>Head Office Location</p>
@@ -154,7 +160,7 @@
             </div>
             <div
               class="carousel-item"
-              style="background-image: url(img/slider/euro_1.jpg)"
+              style="background-image: url(img/slider/slider_1.jpg)"
             >
               <div class="container">
                 <p>VISIT US AT OUR MAIN OFFICE</p>
@@ -167,14 +173,14 @@
             </div>
             <div
               class="carousel-item"
-              style="background-image: url(img/slider/euro_3.jpg)"
+              style="background-image: url(img/slider/slider_3.jpg)"
             >
               <div class="container">
                 <p>The Most Competitive Rates just for you!</p>
                 <h2 class="fs-1">Call Now for most updated rates</h2>
-                <p class="btn btn-light">
+                <p class="btn btn-outline-secondary">
                   <a
-                    class="text-decoration-none text-black"
+                    class="text-decoration-none text-white"
                     href="tel:+13053772536"
                     >305.377.2536</a
                   >
@@ -205,21 +211,23 @@
 
       <section class="bg-dark p-3">
         <div class="container">
-          <div class="row">
-            <div class="col-md-3 text-white">
+          <div class="row justify-content-center align-items-center">
+            <div class="col-md-3 text-center pb-1 text-white">
               <h3>LOOKING FOR RATES?</h3>
             </div>
-            <div
-              class="col-md-7 text-white d-inline-flex justify-content-center align-items-center"
-            >
-              <p>
+            <div class="col-md-7 pb-1 text-white text-center">
+              <span>
                 We provide the most competitive rates just for you. Call Now
-                305.377.2536
-              </p>
+                <a
+                  class="text-decoration-none btn-outline-light"
+                  href="tel:+13053772536"
+                  >305.377.2536</a
+                >
+              </span>
             </div>
             <div class="col-md-2 text-center">
               <a
-                class="btn btn-lg btn-primary"
+                class="btn btn-lg btn-secondary"
                 href="https://xchangeofamerica.com/"
                 >Order Online</a
               >
@@ -302,13 +310,17 @@
           <div class="container pt-5 pb-5">
             <div class="row text-center text-white">
               <div class="col-md-12">
-                <h1>305 377 2536</h1>
-                <h4>CALL NOW</h4>
+                <a
+                  class="text-decoration-none btn-outline-light mb-1"
+                  href="tel:+13053772536"
+                  ><h2>305 377 2536</h2></a
+                >
+                <h3>CALL NOW</h3>
                 <p>or</p>
                 <a
-                  class="btn btn-outline-light text-white"
+                  class="btn btn-outline-light"
                   href="https://xchangeofamerica.com/"
-                  >ORDER ONLINE</a
+                  ><h5>ORDER ONLINE</h5></a
                 >
               </div>
             </div>
@@ -319,14 +331,7 @@
       <section class="pt-5 pb-5 bg-light">
         <div class="container">
           <div class="row">
-            <div class="col-md-3 text-center mb-2">
-              <img
-                class="mt-5 rounded mx-auto"
-                src="img/euro_logo.png"
-                width="250rem"
-                alt=""
-              />
-            </div>
+            <div class="col-md-3 text-center mb-2"></div>
             <div class="col-md-6 text-center">
               <h1>BEST RATES</h1>
               <p>
@@ -429,7 +434,7 @@
     <footer class="bg-light">
       <div class="container">
         <div class="row row-col-4 py-5 mt-5 border-top">
-          <div class="col-md-3 text-start">
+          <div class="col-md-4 text-start">
             <a
               href="index.html"
               class="d-flex align-items-sm-start mb-3 link-dark text-decoration-none"
@@ -446,7 +451,10 @@
               Our company will go the extra mile to offer the best currency
               exchange rate that will meet your requirements.
             </p>
-            <p class="text-muted">&copy; 2021</p>
+            <p class="text-muted">
+              &copy; Copyright &copy; <span class="year">2022</span> Euro
+              Exchange USA.
+            </p>
           </div>
 
           <div class="col-md-4 text-start">
@@ -454,29 +462,44 @@
             <div class="col-md-12">
               <p>
                 <b>Head Office:</b> 235 SE 1st Street, Miami <br />
-                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+                <b>Telephone:</b>
+                <a
+                  class="link-secondary text-decoration-none"
+                  href="tel:+13053772536"
+                  >(305) 377-2536</a
+                >
               </p>
             </div>
 
             <div class="col-md-12">
               <p>
                 <b>Doral Office:</b> 10429, NW 41st Street <br />
-                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+                <b>Telephone:</b>
+                <a
+                  class="link-secondary text-decoration-none"
+                  href="tel:+13053772536"
+                  >(305) 377-2536</a
+                >
               </p>
             </div>
 
             <div class="col-md-12">
               <p>
                 <b>Downtown Miami Office:</b> 242 NE 1st street, Miami <br />
-                <b>Telephone:</b> <a href="tel:+13053772536">(305) 377-2536</a>
+                <b>Telephone:</b>
+                <a
+                  class="link-secondary text-decoration-none"
+                  href="tel:+13053772536"
+                  >(305) 377-2536</a
+                >
               </p>
             </div>
           </div>
 
           <div class="col-md-2 text-start">
             <h5>Follow us</h5>
-            <ul class="list-unstyled d-flex justify-content-start">
-              <li class="ms-3">
+            <ul class="list-unstyled d-flex flex-grow-1 justify-content-start">
+              <li>
                 <a
                   class="link-dark"
                   href="https://www.facebook.com/EuroExchangeUSA/"
@@ -484,14 +507,14 @@
                   <i class="bi bi-facebook" style="font-size: 2rem"></i>
                 </a>
               </li>
-              <li class="ms-3">
+              <li class="ms-1">
                 <a
                   class="link-dark"
                   href="https://www.instagram.com/euroexchange/"
                   ><i class="bi bi-instagram" style="font-size: 2rem"></i
                 ></a>
               </li>
-              <li class="ms-3">
+              <li class="ms-1">
                 <a
                   class="link-dark"
                   href="https://www.linkedin.com/company/euroexchangegroup/about/"
@@ -505,35 +528,51 @@
             <h5>Section</h5>
             <ul class="nav flex-column">
               <li class="nav-item mb-2">
-                <a href="index.html" class="nav-link p-0 text-muted">Home</a>
+                <a
+                  href="index.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
+                  >Home</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="about-us.html" class="nav-link p-0 text-muted"
+                <a
+                  href="about-us.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
                   >Abouts Us</a
                 >
               </li>
               <li class="nav-item mb-2">
-                <a href="services.html" class="nav-link p-0 text-muted"
+                <a
+                  href="services.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
                   >Services</a
                 >
               </li>
               <li class="nav-item mb-2">
-                <a href="locations.html" class="nav-link p-0 text-muted"
+                <a
+                  href="locations.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
                   >Location</a
                 >
               </li>
               <li class="nav-item mb-2">
-                <a href="rates.html" class="nav-link p-0 text-muted">Rates</a>
+                <a
+                  href="rates.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
+                  >Rates</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="contact-us.html" class="nav-link p-0 text-muted"
+                <a
+                  href="contact-us.html"
+                  class="nav-link p-0 link-secondary text-decoration-none"
                   >Contact Us</a
                 >
               </li>
               <li class="nav-item mb-2">
                 <a
                   href="https://xchangeofamerica.com/"
-                  class="btn btn-outline-primary"
+                  class="btn btn-outline-secondary"
                   >Order Online</a
                 >
               </li>
