--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       style="--bs-bg-opacity: 0.85"
     >
       <div
-        class="container d-flex flex-wrap align-items-center justify-content-center justify-content-sm-between"
+        class="container d-flex flex-wrap align-items-center justify-content-center justify-content-sm-between p-2"
       >
         <a
           class="navbar-brand d-flex col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
